# blindtube

./: .gitignore  compile.bat  compile.sh  main.py  old.txt  pyproject.toml  readme.md  requirements.txt  settings.json  task.md  test.py  tube.py  vid_test.py  youtube_cli.py
go/: README.md  build.sh  deploy.sh  go.mod
go/cmd/blindtube/: main.go
go/cmd/blindtube-web/: main.go
go/internal/config/: config.go
go/internal/ui/: css.go  html.go  js.go  server.go  service.go
go/internal/ytapi/: ffmpeg.go  ytapi.go
pafy/: backend_youtube_dl.py
src/core/: settings_manager.py  tube_worker.py
src/ui/: main_window.py  proxy_dialog.py  video_info_window.py  video_player_widget.py
