[project]
name = "blindtube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.8.1",
    "pytube",
    "pyvidplayer2>=0.9.25",
    "yt-dlp>=2025.3.31",
]

[tool.uv.sources]
pytube = { git = "https://github.com/kszczepanskidev/pytube" }
