[project]
name = "blindtube"
version = "0.1.0"
description = "A YouTube player designed for accessibility"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.8.1",
    "yt-dlp>=2026.3.17",
    "pyvidplayer2>=0.9.31",
    "accessible-output3>=0.1.2",
    "sounddevice>=0.5.5",
    "pysubs2>=1.8.1",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.3",
    "pygame-ce>=2.5.7",
    "click>=8.1.8",
]
